--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <script src="index.js"></script>
     </head>
     <header>
-        <h1 style="margin-top: 20px;"><center>Quiz</center></h1>
+        <div style="margin-top: 20px; color: white; font-size: 500%;"><center>Quiz</center></div>
     </header>
-    <body class="bg-secondary text-white">
+    <body>
             <div class="d-flex justify-content-center">
                 <div id = "main-content">
                     <div id = "ques1">  
@@ -44,7 +44,7 @@
                     </div>
                     <div id="total-score"></div>
                     <div id="final-result"></div>
-                    <button id = "nextButton" class="btn btn-info" onclick="displayQuestions()">Start Quiz</button>
+                    <button id = "nextButton" class="btn btn-warning" onclick="displayQuestions()">Start Quiz</button>
                 </div>
             </div>
     </body>
